# SamplerSandbox

./: .gitignore  CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  index.md
source/: .clang-format
source/app/: main.cpp
source/core/: Camera.cpp  Camera.h  ConvergenceTest.cpp  ConvergenceTest.h  Hitable.h  HitableList.cpp  HitableList.h  Maths.cpp  Maths.h  ONB.cpp  ONB.h  PixelSampler.cpp  PixelSampler.h  RGBColour.h  Random.h  Ray.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Solstice.h  Sphere.cpp  Sphere.h  Vector3.h
source/core/IO/: Image.cpp  Image.h  ImageIO.cpp  ImageIO.h
source/core/factories/: RendererFactory.h  SamplerRenderer.cpp  SamplerRenderer.h
source/core/random/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
source/core/renderers/: RendererFactory.h  SamplerRenderer.cpp  SamplerRenderer.h
source/core/samplers/: HaltonSampler.cpp  HaltonSampler.h  SamplerFactory.h  StratifiedSampler.cpp  StratifiedSampler.h
source/core/statistics/: CheckerboardTest.cpp  CheckerboardTest.h  Statistics.h
source/pycore/: PyGeometry.cpp
source/solpy/: PyGeometry.cpp
source/solstice/: solstice.cpp
source/utils/lodepng/: lodepng.cpp
